feat: AdministrationApi::listAllUsers
